--- a/src/theme/chat/_bars.scss
+++ b/src/theme/chat/_bars.scss
@@ -44,7 +44,7 @@
     margin: 0;
   }
 
-  #{c(button button)} {
+  #{c(button new button)} {
     display: none;
   }
 }
