--- a/src/theme/general/_checkbox.scss
+++ b/src/theme/general/_checkbox.scss
@@ -7,4 +7,5 @@
 
 #{c(checkbox checkbox)}#{c(checkbox box)}#{c(checkbox checked)} {
   background-color: var(--main-color);
+  border-color: transparent;
 }
